chat: fix z-index issue in select messages mode

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1357,18 +1357,17 @@
                 [class *= 'message-'] { position: relative }
                 /// Selected messages.
                 /.qTFAl {
+                    z-index 0 i;
                     /// Pseudo-background.
                     &::before {
                         content: '';
                         opacity: 0.08;
                         position: absolute;
                         top: 0; left: 0; bottom: 0; right: 0;
-                        z-index: 0;
                     }
                     /// States.
                     &:hover, &._3Z2tD {
                         c: 0 0 t;
-                        z-index: 0;
                         &::before { c: 0 0 ac }
                     }
                     /// Right -> Fix bg for checkbox button.
